# restaurant-engine

./: .editorconfig  .env.example  .gitattributes  .gitignore  .prettierignore  00_RESTAURANT_ENGINE_BLUEPRINT.md  CLAUDE_PROJECT_PROMPT.md  README.md  compose.yaml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/control-center/: index.html  (+4 more)
backend/: alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  audit_router.py  audit_view.py  health.py  public_media_router.py  router.py  session_router.py  session_view.py
backend/app/core/: __init__.py  browser_context.py  cache_control.py  correlation.py  database.py  errors.py  host_guard.py  hosts.py  logging.py  openapi.py  security.py  settings.py
backend/app/domains/audit/: actions.py  details.py  models.py  queries.py  recorder.py
backend/app/domains/businesses/: entitlements.py  features.py  invitations.py  lifecycle.py  models.py  queries.py  repository.py  resolution.py  router.py  router_invitations.py  router_onboarding.py  router_platform.py  router_public.py  schemas.py  service.py  slugs.py
backend/app/domains/catalog/: dietary.py  models.py  modifier_service.py  policies.py  public_schemas.py  public_service.py  repository.py  router_admin.py  router_public.py  schemas.py  service.py  service_support.py
backend/app/domains/identity/: actor.py  authorization.py  cookies.py  dependencies.py  exceptions.py  memberships.py  models.py  policies.py  recovery.py  router.py  router_recovery.py  schemas.py  service.py  throttling.py
backend/app/domains/media/: __init__.py  models.py  policies.py  processing.py  public_service.py  repository.py  router_admin.py  schemas.py  service.py  service_support.py  storage.py  sweep.py  upload.py
backend/app/domains/tenants/: lifecycle.py  models.py  queries.py  repository.py  router.py  router_platform.py  schemas.py  service.py
backend/migrations/: env.py
backend/migrations/versions/: 0c31eebbac66_catalog_core_m3a.py  116b4abf9a40_tenancy_model_businesses_and_audit_fk.py  116b4abf9a40_tenancy_model_restaurants_and_.py  59b463781dcc_media_m3c_adr_017.py  6fbce030db33_onboarding_recovery_and_entitlements_m2d.py  91774776ff27_identity_and_audit_foundation.py  96b88c334395_baseline.py  f8ad809962f8_modifiers_m3b.py
backend/scripts/: benchmark_password_hashing.py  create_platform_admin.py  export_openapi.py  reset_e2e_database.py  sweep_media.py
backend/tests/: conftest.py
backend/tests/api/: test_cache_policy.py  test_correlation.py  test_error_handlers.py  test_health_live.py  test_health_ready_degraded.py  test_host_guard.py  test_public_surface_invariants.py  test_request_logging.py
backend/tests/integration/: conftest.py  test_bootstrap_script.py  test_health_ready.py  test_migrations.py  test_reset_e2e_database.py
backend/tests/security/: conftest.py  test_audit_list.py  test_bootstrap.py  test_catalog.py  test_csrf.py  test_entitlements.py  test_invitations.py  test_isolation.py  test_lifecycle.py  test_login.py  test_media.py  test_media_compensation.py  test_media_prebody.py  test_media_preview.py  test_media_sweep.py  test_media_verify.py  test_modifiers.py  test_password_recovery.py  test_platform_pagination.py  test_public_concurrency.py  test_public_media.py  test_public_menu.py  test_public_resolution.py  test_response_hygiene.py  test_session_lifecycle.py  test_session_view.py
backend/tests/unit/: test_audit_details.py  test_capabilities.py  test_catalog_policies.py  test_catalog_schemas.py  test_email_masking.py  test_error_envelope.py  test_hosts.py  test_lifecycle_transitions.py  test_media_audit.py  test_media_durability.py  test_media_policies.py  test_media_processing.py  test_media_storage.py  test_media_sweep_cli.py  test_media_upload.py  test_naming_convention.py  test_openapi_export.py  test_operation_ids.py  test_password_security.py  test_public_media_service.py  test_public_menu_projection.py  test_settings.py  test_slugs.py  test_throttling.py
docs/: 00_PROJECT_START.md  01_PRODUCT_SCOPE.md  02_ARCHITECTURE.md  03_DOMAIN_RULES.md  04_SECURITY_AND_TENANCY.md  05_DEVELOPMENT_WORKFLOW.md  06_TEST_STRATEGY.md  07_DEPLOYMENT_RUNBOOK.md  08_ROADMAP.md
e2e/: package.json  playwright.config.ts  tsconfig.json
scripts/: contract-check.mjs  smoke-dev.mjs
(+179 files in other folders)
