# Restaurant Engine backend — Python project and tooling contract (ADR-006).
#
# All dependencies are pinned to exact versions (ADR-006); upgrades happen
# through small, dedicated pull requests.

[project]
name = "restaurant-engine-backend"
version = "0.0.0"
description = "Restaurant Engine API — multi-tenant restaurant platform backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic==1.18.5",
    "argon2-cffi==25.1.0",
    "email-validator==2.3.0",
    "fastapi==0.139.0",
    "pillow==12.3.0",
    "psycopg[binary]==3.3.4",
    "pydantic-settings==2.14.2",
    "python-multipart==0.0.32",
    "sqlalchemy==2.0.51",
    "structlog==26.1.0",
    "uvicorn[standard]==0.51.0",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "mypy==2.3.0",
    "pytest==9.1.1",
    "ruff==0.15.21",
]

[tool.uv]
# No installable package exists during Milestone 0; manage the environment
# and lockfile without building the project itself.
package = false

# --- Ruff: lint + format baseline -----------------------------------------

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # import sorting
  "B",   # bugbear
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "S",   # bandit security rules
  "C4",  # comprehensions
  "T20", # no stray print statements
  "RUF", # ruff-native rules
]

[tool.ruff.lint.per-file-ignores]
# Tests may use assert and hard-coded example values.
"tests/**" = ["S101", "S105", "S106"]
# Operator CLIs: console output is their purpose.
"scripts/*" = ["T201"]

# --- mypy: strict typing baseline ------------------------------------------

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
show_error_codes = true
pretty = true
# tests/ is checked as well as app/ but is not an installed package.
mypy_path = "."
explicit_package_bases = true

# python-multipart ships no type stubs / py.typed marker; the upload module
# validates its returns explicitly (M3C).
[[tool.mypy.overrides]]
module = "multipart.*"
ignore_missing_imports = true

# --- pytest -----------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --strict-markers --strict-config"
xfail_strict = true
markers = [
    "integration: exercises the real PostgreSQL database (docker compose up -d db)",
]
